--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "projeto-drivencracy",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongo": "^0.1.0",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "nodemon": "^3.0.1"
   }
 }
